# dvd-logo-haskell

./: CHANGELOG.md  README.md  dvd-logo-haskell.cabal  stack.yaml
app/: Main.hs
