cabal-version:      2.4
name:               dvd-logo-haskell
version:            0.1.0.0

synopsis:           A simple program that simulates the DVD logo bouncing around the screen.
description:        This is a simple program that simulates the DVD logo bouncing around the screen.

license:            MIT
author:             Alex Jercan
maintainer:         jercan_alex27@yahoo.com

category:           Graphics
extra-source-files: CHANGELOG.md

executable dvd-logo-haskell
    main-is:          Main.hs

    build-depends:    base ^>=4.18.0.0,
                      gloss ^>= 1.13.2.2,
                      random ^>= 1.2.1.1,
                      time ^>= 1.12.2
    hs-source-dirs:   app
    default-language: Haskell2010
